name:                yamplo
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/yamplo#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable yamplo
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       StateVar
                     , Yampa >= 0.10.3
                     , base >= 4.8 && <4.9
                     , binary == 0.7.5.0
                     , binary-strict == 0.4.8.3
                     , bytestring == 0.10.6.0
                     , filepath >= 1.4.0.0
                     , foreign-store
                     , linear
                     , random
                     , sdl2 == 2.1.2
                     , text
                     , unordered-containers
                     , vector == 0.10.12.3
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/yamplo
